Add React UI and FastAPI backend

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ openai>=1.0.0
 tiktoken>=0.5.0
 # Optional: for vector stores in RAG examples
 # faiss-cpu>=1.7.4
-# chromadb>=0.4.0
+fastapi>=0.100.0
+uvicorn>=0.23.0
+aiofiles>=23.0.0
 
